# UICheck-CLI

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.py
uicheck_cli/: __init__.py  __main__.py  analyzer.py  cli.py  fixer.py  reporter.py  scanner.py  scorer.py  utils.py
uicheck_cli/rules/: __init__.py  accessibility.py  antipattern.py  base.py  color.py  layout.py  performance.py  spacing.py  typography.py
